--- a/header.html
+++ b/header.html
@@ -73,7 +73,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Kaun Banega Crorepati</a>
+          <a class="navbar-brand" href="#">Kaun Banega Entrepreneur</a>
         </div>
        <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
