--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Kaun Banega Entrepreneur">
+    <meta name="description" content="Kaun Banega Crorepati">
     <meta name="author" content="Rtr. Abhishek Jain">
     <title>KBC</title>
 
@@ -25,9 +25,9 @@
 		var clock;
 
 		$(document).ready(function() {
-      var limit=120;
+      var limit=60;
       if(quel>5){
-        limit=180;
+        limit=150;
       }
 			clock = $('.clock').FlipClock(limit, {
 		        clockFace: 'MinuteCounter',
